--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "discord.js": "^14.21.0",
     "dotenv": "^17.1.0",
+    "express": "^5.1.0",
     "v2componentsbuilder": "^1.0.27"
   }
 }
