--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "discord.js": "^14.21.0",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.3",
     "v2componentsbuilder": "^1.0.27"
   }
 }
